--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Karla&family=Roboto&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
+
 header{
     font-family: Roboto, sans-serif;
+    box-shadow: 0 0 10px black;
+
 }
 header .descuento{
     background-color: #1CD1B0;
@@ -20,10 +23,37 @@ header .titulo{
     padding: 28px;
     
 }
+header .nav-bar{
+    background-color: #001D2D;
+}
+header .nav-bar ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 5px;
+
+}
+header .nav-bar ul li{
+    padding: 10px 0;
+    color: #FFFFFF;
+}
+header .nav-bar ul li a{
+    text-decoration: none;
+    color: #FFFFFF;
+    padding: 10px 15px;
+
+
+}
+header .nav-bar ul li a:hover{
+    color:#001D2D ;
+    background-color:#FFFFFF ;    padding: 10px 15px;
+
+}
+header .nav-bar ul li a:active{
+    font-weight: bold;
+}
 main{
-    
-    
-    font-family: Roboto, sans-serif;
+        font-family: Roboto, sans-serif;
 }
 section{
     display: flex;
@@ -40,6 +70,8 @@ section article{
     border-radius: 16px 16px 0 0;
     text-align: center;
     position: relative;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 
 }
 
@@ -95,6 +127,114 @@ article .bg-headerCard i{
     font-size: 2rem;
 }
 
+.caja-formularios{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px auto;
+    width: 620px;
+
+    
+}
+.caja-formularios h1{
+    align-self:flex-start ;
+    font-family: Inter, sans-serif;
+    font-size: 72px;
+    font-weight: bold;
+}
+input[type="mail"]{
+    border: 1,53px solid black;
+    width: 620px;
+    font-family: Karla, sans-serif;
+    height: 60px;
+    font-size: 20px;
+    margin: 10px 0 10px;
+}
+input[type="text"]{
+    border: 1,53px solid black;
+    width: 620px;
+    font-family: Karla, sans-serif;
+    height: 60px;
+    font-size: 20px;
+    margin: 10px 0 10px;
+}
+input[type="password"]{
+    border: 1,53px solid black;
+    width: 620px;
+    font-family: Karla, sans-serif;
+    height: 60px;
+    font-size: 20px;
+    margin: 10px 0 10px;
+}
+div select{
+    width: 620px;
+    height: 60px;
+    margin: 10px 0 10px;
+    text-indent: 10px;
+}
+
+textarea{
+    Width: 620px;
+    Height: 251px;
+    margin: 10px 0 10px;
+}
+.botonera-seccion{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+
+}
+.boton-resetear{
+    background-color: #888888;
+    color: #FFFFFF;
+    font-family: Karla;
+    font-weight: bold;
+    font-size: 24px;
+    width: 300px;
+    height: 53.79px;
+    border-radius: 23.011px;
+    border: none;
+    margin: 10px 0 10px;
+
+}
+.boton-enviar{
+    background: #1CD1B0;
+    border-radius: 23.011px;
+    text-align: center;
+    width: 300px;
+    height: 53.79px;
+    font-family: Karla;
+    font-weight: bold;
+    font-size: 24px;
+    margin: 10px 0 10px;
+    border: none;
+}
+
+.login-enviar{
+    background: #1CD1B0;
+    border-radius: 23.011px;
+    text-align: center;
+    width: 620px;
+    height: 53.79px;
+    font-family: Karla;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 20px;
+    border: none;
+}
+.caja-formularios p{
+    font-family: Karla;
+font-style: normal;
+font-weight: normal;
+font-size: 21.4769px;
+line-height: 28px;
+}
+.caja-formularios p a{
+    text-decoration: none;
+    color: lightskyblue;
+}
+
 footer{
     background-color: #00669F;
     color: #FFF9F9    ;
@@ -128,9 +268,7 @@ footer img{
         max-width: 400px;
         margin: 10px auto;
     }
-    footer .espacio{
-        width:0%;
-    }
+
     footer img{
         width: 50px;
         margin: 16px 0px;
@@ -139,7 +277,7 @@ footer img{
         display: none;
     }   
     footer{
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
         text-align: center;
     }
